# restobook

./: .gitignore  README.md  db.sql  main.py  pyproject.toml
app/: __init__.py  api.py  config.py
app/db/: __init__.py  models.py
app/db/crud/: menu.py  reservate.py  resto.py  table.py  ticket.py  user.py
app/db/schemas/: menu.py  reservate.py  resto.py  table.py  ticket.py  user.py
app/routes/: admin.py  auth.py  users.py
app/utils/: auth.py  security.py
